syntax = "proto3"; 
package repo;
option go_package = "github.com/komadiina/spelltext/proto/repo;repo";

// import "google/protobuf/timestamp.proto";

message User {
    uint64 id = 1;
    string username = 2;
    string password_hash = 3;
    string email = 4;
    uint64 selected_character_id = 5;
}

message Hero {
    uint64 id = 1;
    string name = 2;
    int64 base_health = 3;
    int64 base_power = 4;
    int64 base_strength = 5;
    int64 base_spellpower = 6;
    int64 health_per_level = 7;
    int64 power_per_level = 8;
    int64 strength_per_level = 9;
    int64 spellpower_per_level = 10;
}

message ItemType {
    uint64 id = 1;
    string code = 2;
    string name = 3;
}

message EquipSlot {
    uint64 id = 1;
    string code = 2;
    string name = 3;
}

message ItemTemplate {
    uint64 id = 1;
    string name = 2;
    uint64 item_type_id = 3;
    uint64 equip_slot_id = 4;
    string description = 5;
    uint64 gold_price = 6;
    uint64 buyable_with_tokens = 7;
    uint64 token_price = 8;
    string metadata = 9;
    EquipSlot equip_slot = 20;
    ItemType item_type = 21;
}

message ConsumableTemplate {
    uint64 id = 1;
    string name = 2;
    uint32 stackable = 3;
    uint64 gold_price = 4;
}

message Item {
    uint64 id = 1;
    string prefix = 2;
    string suffix = 3;
    uint64 item_template_id = 4;
    int64 health = 5;
    int64 power = 6;
    int64 strength = 7;
    int64 spellpower = 8;
    int64 bonus_damage = 9;
    int64 bonus_armor = 10;
    ItemTemplate item_template = 20;
}

message Consumable {
    uint64 id = 1;
    string prefix = 2;
    string suffix = 3;
    uint64 item_template_id = 4;
    int64 health = 5;
    int64 power = 6;
    int64 strength = 7;
    int64 spellpower = 8;
    int64 bonus_damage = 9;
    int64 bonus_armor = 10;
    uint64 uses = 11;

    ConsumableTemplate consumable_template = 20;
}

message Character {
    uint64 character_id = 1;
    uint64 user_id = 2;
    uint64 hero_id = 3;
    string character_name = 4;
    uint64 level = 5;
    uint64 experience = 6;
    uint64 gold = 7;
    uint64 tokens = 8;
    uint64 points_health = 9;
    uint64 points_power = 10;
    uint64 points_strength = 11;
    uint64 points_spellpower = 12;
    uint64 unspent_points = 13;

    Hero hero = 20;
    User user = 21;
}

message CharacterInventory {
    uint64 character_id = 1;
    uint64 gold = 2;
    uint64 tokens = 3;
    uint64 base_inventory_size = 4;
    uint64 expanded_inventory_size = 5;

    Character character = 20;
}

message ItemInstance {
    uint64 item_instance_id = 1;
    uint64 item_id = 2;
    uint64 owner_character_id = 3;
    // google.protobuf.Timestamp created_at = 4;

    Item item = 20;
}

message CharacterInventoryItemInstance {
    uint64 character_id = 1;
    uint64 item_instance_id = 2;
    Character character = 20;
    ItemInstance item_instance = 21;
}

message Vendor {
    uint64 id = 1;
    string name = 2;
    string ware_shorthand = 3;
}

message VendorWare {
    uint64 vendor_id = 1;
    uint64 item_type_id = 2;

    Vendor vendor = 20;
    ItemType item_type = 21;
}

message GambaChest {
    uint64 id = 1;
    string name = 2;
    string description = 3;
    uint64 gold_price = 4;
}

message GambaChestContent {
    uint64 gamba_chest_id = 1;
    uint64 item_id = 2;

    GambaChest gamba_chest = 20;
    Item item = 21;
}

message CharacterEquipment {
    uint64 character_id = 1;
    uint64 equip_slot_id = 2;
    uint64 item_instance_id = 3;

    EquipSlot equip_slot = 20;
    ItemInstance item_instance = 21;
}

message Quest {
    uint64 id = 1;
    string name = 2;
    string description = 3;
    uint64 level_requirement = 4;
}

message QuestPrerequisite {
    uint64 base_quest_id = 1;
    uint64 prequisite_quest_id = 2;

    Quest base_quest = 20;
    Quest prequisite_quest = 21;
}

message QuestReward {
    uint64 id = 1;
    uint64 quest_id = 2;
    string reward_type = 3;

    uint64 item_id = 4;
    uint64 amount = 5;

    Quest quest = 20;
    Item item = 21;
}

message PlayerCompletedQuests {
    uint64 character_id = 1;
    uint64 quest_id = 2;

    Quest quest = 20;
}

message NpcTemplate {
    uint64 id = 1;
    string name = 2;
    string description = 3;
    uint32 min_level = 4;
    uint32 max_level = 5;
    uint64 health_points = 6;
    uint64 base_damage = 7;
    uint64 base_xp_reward = 8;
    uint64 drop_item_id = 9;
    uint64 gold_reward = 10;

    Item drop_item = 20;
}

message Npc {
    uint64 id = 1;
    string prefix = 2;
    string suffix = 3;
    uint64 template_id = 4;
    float health_multiplier = 5;
    float damage_multiplier = 6;
    uint32 level = 7;

    NpcTemplate npc_template = 20;
}

message QuestObjective {
    uint64 quest_id = 1;
    uint64 npc_id = 2;

    Quest quest = 20;
    Npc npc = 21;
}

message Ability {
    uint64 id = 1;
    string name = 2;
    string description = 3;
    string type = 4;
    uint32 talent_point_cost = 5;
    uint64 power_cost = 6;
    uint64 base_damage = 7;
    float strength_multiplier = 8;
    float spellpower_multiplier = 9;
    float st_mult_perlevel = 10;
    float sp_mult_perlevel = 11;
    uint64 min_level = 12;
}

message NpcLootTable {
    uint64 npc_template_id = 1;
    uint64 item_id = 2;
    float chance = 3;
    uint32 quantity = 4;

    NpcTemplate npc_template = 20;
    Item item = 21;
}

message NpcAbility {
    uint64 npc_id = 1;
    uint64 ability_id = 2;

    Npc npc = 20;
    Ability ability = 21;
}

message Update {
    uint64 id = 1;
    string title = 2;
    string version = 3;
    string description = 4;
}

message PlayerAbilityTree {
    uint64 character_id = 1;
    uint64 ability_id = 2;

    optional Character character = 20;
    Ability ability = 21;
}